fixed paddings on tablet

--- a/src/styles/blocks/_article.scss
+++ b/src/styles/blocks/_article.scss
@@ -57,7 +57,7 @@
     grid-row: 1 / 2;
 
     @include onTablet {
-      padding-left: 20px;
+      padding-left: 30px;
     }
 
     @include onMobile {
