--- a/src/styles/blocks/_contact.scss
+++ b/src/styles/blocks/_contact.scss
@@ -3,10 +3,6 @@
     @include container;
 
     @include onTablet {
-      padding: 0 60px;
-    }
-
-    @include onMobile {
       padding: 0 30px;
     }
   }
