--- a/src/styles/blocks/_features.scss
+++ b/src/styles/blocks/_features.scss
@@ -4,7 +4,7 @@
     margin-bottom: 170px;
 
     @include onTablet {
-      padding: 0 60px;
+      padding: 0 30px;
       margin-bottom: 140px;
     }
 
