--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
 
     @include onTablet {
-      padding: 0 60px;
+      padding: 0 30px;
     }
 
     @include onMobile {
