--- a/src/styles/blocks/_technology.scss
+++ b/src/styles/blocks/_technology.scss
@@ -5,7 +5,7 @@
 
     @include onTablet {
       margin-bottom: 140px;
-      padding: 0 60px;
+      padding: 0 30px;
     }
 
     @include onMobile {
